# shortlink-rs

./: .env  Cargo.toml  README.md  config.toml  talbe.sql
src/: cache.rs  config.rs  main.rs
src/db/: link.rs
src/errors/: mod.rs  save_link_error.rs
src/models/: short_link.rs
src/routes/: mod.rs  redirect.rs  shorten.rs
src/tasks/: mod.rs  sync_visits.rs
src/utils/: shortcode.rs
