[package]
name = "shortlink-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
chrono = "0.4.41"
dotenvy = { version = "0.15.7", default-features = false }
rand = "0.9.1"
redis = { version = "0.31.0", features = ["tokio-comp"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["mysql", "runtime-tokio-native-tls"] }
tokio = { version = "1.45.0", features = ["full"] }
